log/build_2026-02-10_21-51-14/image_saver/stderr.log
  File "/home/cherryad3/usb_camera_ws/install/image_saver/lib/python3.10/site-packages/image_saver/pose_estimation.py", line 5
    ffrom .rgb_detection import rgb_detector
                         ^^^^^^
SyntaxError: invalid syntax

